fix: bring back scrollbar for other elements

--- a/src/styles/training-table-with-buttons.css
+++ b/src/styles/training-table-with-buttons.css
@@ -10,7 +10,7 @@
   scrollbar-width: none;
 }
 
-::-webkit-scrollbar {
+.training-with-buttons::-webkit-scrollbar {
   display: none;
 }
 
